# python3-lxclib

./: README.md  main.py  pyproject.toml  utils.py
lxclib/: main.py
lxclib/cli/: core.py
